--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
 
     <!-- TODO: 
-    1   nav se esconde
+    1   |nav se esconde|
     2   scroll bar rosa
     3   imagenes del portafolio
     4   textos mejorar
