--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
                 <div class="col-md-12 col-sm-12">
 
                     <center>
-                        <img src="img/BELLYBABY LOGOTIPO.png" alt="" width="50%" style="filter: drop-shadow(2.5px 2.5px 2.5px rgb(77, 77, 77));">
+                        <img src="img/BELLYBABY LOGOTIPO.png" alt="" width="50%"
+                            style="filter: drop-shadow(2.5px 2.5px 2.5px rgb(77, 77, 77));">
                     </center>
                     <h1 class="wow fadeInUp head" data-wow-delay="0.6s">PINCELADAS PARA TI Y TU BEBÉ</h1>
                     <p class="wow fadeInUp lr-pd" data-wow-delay="0.8s">Mi misión es crear momentos inolvidables que te
