--- a/about.html
+++ b/about.html
@@ -72,29 +72,37 @@
         </div>
     </div>
 
-
+    <div class="area">
+        <ul class="circles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
     <!-- Home Section -->
 
-    <section id="home" class="main-about" style="background-color: #ffffff;">
+    <section id="home" class="main-about" >
         <div class="container">
             <div class="row">
 
                 <div class="col-md-12 col-sm-12">
-                    <h1 class="wow fadeInUp head" data-wow-delay="0.6s">Sobre </h1><img class="wow fadeInUp " src="img/BELLYBABY LOGOTIPO.png" width="20%" alt="" srcset="" style="filter: drop-shadow(5px 5px 5px #222);">
-                    <p class="wow fadeInUp lr-pd" data-wow-delay="0.8s">Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Sint voluptatem dolore tempore, labore vitae suscipit omnis, adipisci nam
-                        natus iste iure enim aliquam nobis maxime sunt nostrum dolorum ratione ex?</p>
+                    <h1 class="wow fadeInUp head" data-wow-delay="0.6s">Sobre </h1><img class="wow fadeInUp " src="img/BELLYBABY LOGOTIPO.png" width="40%" alt="" srcset="" style="filter: drop-shadow(5px 5px 5px #222);">
+                    <p class="wow fadeInUp lr-pd" data-wow-delay="0.8s">Inspirados en ti, futura mamá, que deseas tener un recuerdo único, original y diferente en esta bella etapa de tu vida.</p>
                 </div>
 
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-            <polygon class="svg--sm" fill="#D9C4D4" points="0,0 30,100 65,21 90,100 100,75 100,100 0,100" />
-            <polygon class="svg--lg" fill="#D9C4D4"
-                points="0,0 15,100 33,21 45,100 50,75 55,100 72,20 85,100 95,50 100,80 100,100 0,100" />
-        </svg>
+        
     </section>
-
+<br>
+<br>
 
     <!-- About Section -->
 
