--- a/index.html
+++ b/index.html
@@ -57,6 +57,21 @@
     6   quitar color verde
     7   
 -->
+
+    <div class="area">
+        <ul class="circles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
     <!-- PRE LOADER -->
 
     <div class="preloader">
@@ -76,7 +91,7 @@
                     <span class="icon icon-bar"></span>
                 </button>
                 <a href="index.html" class="navbar-brand">
-                    Belly Baby
+                    bellybaby
                 </a>
             </div>
 
@@ -99,7 +114,7 @@
 
     <!-- Home Section -->
 
-    <section id="home" class="main" style="background-color: whitesmoke;">
+    <section id="home" class="main" style="">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
@@ -123,13 +138,25 @@
             </div>
         </div>
 
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-            <polygon class="svg--sm" fill="#D9C4D4" points="0,0 30,100 65,21 90,100 100,75 100,100 0,100" />
-            <polygon class="svg--lg" fill="#D9C4D4"
-                points="0,0 15,100 33,21 45,100 50,75 55,100 72,20 85,100 95,50 100,80 100,100 0,100" />
-        </svg>
-    </section>
 
+    </section>
+    <div style="background-color:#c9a7c1 ;">
+        <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+            <defs>
+                <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+            </defs>
+            <g class="parallax">
+                <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(201, 167, 193, 0.84)" />
+                <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(222, 184, 212, 0.5)" />
+                <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(237, 211, 231, 0.3)" />
+                <use xlink:href="#gentle-wave" x="48" y="7" fill="#c9a7c1" />
+            </g>
+        </svg>
+    </div>
+    <!--Waves end-->
+
+    </div>
 
     <!-- Portfolio Section -->
 
@@ -443,7 +470,7 @@
                     <div class="bg-white">
                         <img src="img/calendario.png" width="50%" alt="" srcset="">
                         <h3>1</h3>
-                        <p class="small">Agenda una hora y fecha</p>
+                        <h3 style="margin-bottom: 20%;">Agenda una hora y fecha</h3>
                     </div>
                 </div>
 
@@ -451,7 +478,7 @@
                     <div class="bg-white">
                         <img src="img/diseno-artistico.png" width="50%" alt="" srcset="">
                         <h3>2</h3>
-                        <p class="small">Diseña tu sesión</p>
+                        <h3 style="margin-bottom: 20%;">Diseña tu sesión</h3>
                     </div>
                 </div>
 
@@ -459,15 +486,16 @@
                     <div class="bg-white">
                         <img src="img/madre.png" width="50%" alt="" srcset="">
                         <h3>3</h3>
-                        <p class="small">Vive un día unico</p>
+                        <h3 style="margin-bottom: 20%;">Vive un día unico</h3>
                     </div>
                 </div>
 
-                <a href="about.html" class="wow fadeInUp btn btn-success" data-wow-delay="0.8s">¡Reserva una cita
-                    ahora!</a>
+
 
             </div>
         </div>
+        <a href="about.html" class="wow fadeInUp btn btn-success" data-wow-delay="0.8s">¡Reserva una cita
+            ahora!</a>
     </section>
 
     <!--  -->
@@ -481,11 +509,11 @@
                 <div class="col-md-12 col-sm-12">
                     <div class="footer-copyright">
                         <ul class="social-icon">
-                            <li><a href="#" class="fa fa-facebook wow fadeInUp" data-wow-delay="0.2s"></a></li>
+                            <li><a href="https://www.facebook.com/PANCITAPINTADA" class="fa fa-facebook wow fadeInUp" data-wow-delay="0.2s"></a></li>
                             <li><a href="#" class="fa fa-twitter wow fadeInUp" data-wow-delay="0.4s"></a></li>
                             <li><a href="#" class="fa fa-linkedin wow fadeInUp" data-wow-delay="0.6s"></a></li>
-                            <li><a href="#" class="fa fa-google-plus wow fadeInUp" data-wow-delay="0.8s"></a></li>
-                            <li><a href="#" class="fa fa-dribbble wow fadeInUp" data-wow-delay="1s"></a></li>
+                            <li><a href="badtz_9@hotmail.com" class="fa fa-mail-forward wow fadeInUp" data-wow-delay="0.8s"></a></li>
+                            <li><a href="55 4965 0698" class="fa fa-whatsapp wow fadeInUp" data-wow-delay="1s"></a></li>
                         </ul>
                         <p class="small">Creado por Marko</p>
                     </div>
