--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,20 @@
 
 <body>
 
-
+    <div class="area">
+        <ul class="circles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
     <!-- PRE LOADER -->
 
     <div class="preloader">
@@ -56,7 +69,7 @@
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                 </button>
-                <a href="index.html" class="navbar-brand">BellyBaby</a>
+                <a href="index.html" class="navbar-brand">bellybaby</a>
             </div>
 
             <div class="collapse navbar-collapse">
@@ -80,6 +93,8 @@
             <div class="row">
 
                 <div class="col-md-12 col-sm-12">
+                    <img src="img/BELLYBABY LOGOTIPO.png" alt="" width="50%"
+                        style="filter: drop-shadow(2.5px 2.5px 2.5px rgb(77, 77, 77));">
                     <h1 class="wow fadeInUp head" data-wow-delay="0.6s">Contactanos</h1>
                     <p class="wow fadeInUp lr-pd" data-wow-delay="0.8s">¿Tienes alguna duda, comentario o quieres
                         reservar una cita?</p>
@@ -89,10 +104,25 @@
         </div>
     </section>
 
+    <div style="background-color:#c9a7c1 ;">
+        <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+            <defs>
+                <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+            </defs>
+            <g class="parallax">
+                <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(201, 167, 193, 0.84)" />
+                <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(222, 184, 212, 0.5)" />
+                <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(237, 211, 231, 0.3)" />
+                <use xlink:href="#gentle-wave" x="48" y="7" fill="#c9a7c1" />
+            </g>
+        </svg>
+    </div>
+    <!--Waves end-->
 
     <!-- Contact Section -->
 
-    <section id="contact" style="background-color: #D9C4D4;">
+    <section id="contact">
         <div class="container">
             <div class="row">
 
@@ -100,21 +130,15 @@
                     <div class="contact-detail">
 
                         <div class="contact-detail-1">
-                            <h3>Headquarter</h3>
-                            <p class="small">345 Venue Street, Suite 1800 California United States</p>
-                            <p class="small">000 243 159 1256 / 000 243 159 4568</p>
-                            <p class="small">hello@miniml.com</p>
-                        </div>
-                        <div class="contact-detail-2">
-                            <h3>London Office</h3>
-                            <p class="small">459 New Street, Suite 2000 London</p>
-                            <p class="small">000 243 159 1256 / 000 243 159 4568</p>
-                            <p class="small">hello@miniml.com</p>
+                            <h3>Atendemos a nuestras clientas en toda CDMX y el area metropolitana</h3>
+                            <img src="img/carte.png" width="100%" alt="">
                         </div>
 
                     </div>
                 </div>
-
+                <br>
+                <br>
+                <br>
                 <div class="wow fadeInUp col-md-8 col-sm-8" data-wow-delay="0.4s">
                     <form action="contact.php" method="post">
                         <div class="col-md-6 col-sm-6">
@@ -138,11 +162,7 @@
 
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-            <polygon class="svg--sm" fill="#D9C4D4" points="0,0 30,100 65,21 90,100 100,75 100,100 0,100" />
-            <polygon class="svg--lg" fill="#D9C4D4"
-                points="0,0 15,100 33,21 45,100 50,75 55,100 72,20 85,100 95,50 100,80 100,100 0,100" />
-        </svg>
+
     </section>
 
 
