--- a/index.html
+++ b/index.html
@@ -49,13 +49,10 @@
 <body>
 
     <!-- TODO: 
-    1   |nav se esconde|
+   
     2   scroll bar rosa
     3   imagenes del portafolio
-    4   textos mejorar
-    5   secciones con clip pad
-    6   quitar color verde
-    7   
+  
 -->
 
     <div class="area">
@@ -114,7 +111,7 @@
 
     <!-- Home Section -->
 
-    <section id="home" class="main" style="">
+    <section id="home" class="main" >
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
