--- a/work.html
+++ b/work.html
@@ -35,7 +35,20 @@
 </head>
 
 <body>
-
+    <div class="area">
+        <ul class="circles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
     <!-- PRE LOADER -->
 
     <div class="preloader">
@@ -55,7 +68,7 @@
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                 </button>
-                <a href="index.html" class="navbar-brand">BellyBaby</a>
+                <a href="index.html" class="navbar-brand">bellybaby</a>
             </div>
 
             <div class="collapse navbar-collapse">
@@ -79,16 +92,32 @@
             <div class="row">
 
                 <div class="col-md-12 col-sm-12">
+                    <img src="img/BELLYBABY LOGOTIPO.png" alt="" width="50%"
+                        style="filter: drop-shadow(2.5px 2.5px 2.5px rgb(77, 77, 77));">
                     <h1 class="wow fadeInUp head" data-wow-delay="0.6s">Nuestro Trabajo</h1>
-                    <p class="wow fadeInUp lr-pd" data-wow-delay="0.8s">Lorem ipsum, dolor sit amet consectetur
-                        adipisicing elit. Officia commodi, voluptatibus totam nemo assumenda sunt praesentium asperiores
-                        illum temporibus neque non fuga eos ut alias eveniet odio? Eum, quae esse?</p>
+                    <p class="wow fadeInUp lr-pd" data-wow-delay="0.8s">Tomar la decisión de tener un bebé es
+                        trascendental: significa decidir que desde ese momento tu corazón empezara también a caminar
+                        fuera de tu cuerpo, con nuestro trabajo te acompañamos en esta aventura</p>
                 </div>
 
             </div>
         </div>
     </section>
-
+    <div style="background-color:#c9a7c1 ;">
+        <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+            <defs>
+                <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+            </defs>
+            <g class="parallax">
+                <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(201, 167, 193, 0.84)" />
+                <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(222, 184, 212, 0.5)" />
+                <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(237, 211, 231, 0.3)" />
+                <use xlink:href="#gentle-wave" x="48" y="7" fill="#c9a7c1" />
+            </g>
+        </svg>
+    </div>
+    <!--Waves end-->
 
     <!-- Portfolio Section -->
 
@@ -328,11 +357,7 @@
 
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-            <polygon class="svg--sm" fill="#D9C4D4" points="0,0 30,100 65,21 90,100 100,75 100,100 0,100" />
-            <polygon class="svg--lg" fill="#D9C4D4"
-                points="0,0 15,100 33,21 45,100 50,75 55,100 72,20 85,100 95,50 100,80 100,100 0,100" />
-        </svg>
+
     </section>
 
 
@@ -343,6 +368,9 @@
             <div class="row">
 
                 <div class="col-md-offset-2 col-md-8 col-sm-12">
+                    <video src="img/VID_20200516_141810.mp4" width="100%" autoplay muted loop></video>
+                    <br>
+                    <br>
                     <p class="wow fadeInUp" data-wow-delay="0.4s">Puedes solicitar un presupuesto a medida para tu
                         experiencia BellyBaby</p>
                     <a href="contact.html" class="wow fadeInUp btn btn-success" data-wow-delay="0.8s">¡Solo da clic
