--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                 </button>
-                <a href="index.html" class="navbar-brand">Belly Baby</a>
+                <a href="index.html" class="navbar-brand">bellybaby</a>
             </div>
 
             <div class="collapse navbar-collapse">
@@ -88,21 +88,38 @@
     </div>
     <!-- Home Section -->
 
-    <section id="home" class="main-about" >
+    <section id="home" class="main-about">
         <div class="container">
             <div class="row">
 
                 <div class="col-md-12 col-sm-12">
-                    <h1 class="wow fadeInUp head" data-wow-delay="0.6s">Sobre </h1><img class="wow fadeInUp " src="img/BELLYBABY LOGOTIPO.png" width="40%" alt="" srcset="" style="filter: drop-shadow(5px 5px 5px #222);">
-                    <p class="wow fadeInUp lr-pd" data-wow-delay="0.8s">Inspirados en ti, futura mamá, que deseas tener un recuerdo único, original y diferente en esta bella etapa de tu vida.</p>
+                    <h1 class="wow fadeInUp head" data-wow-delay="0.6s">Sobre </h1><img class="wow fadeInUp "
+                        src="img/BELLYBABY LOGOTIPO.png" width="40%" alt="" srcset=""
+                        style="filter: drop-shadow(5px 5px 5px #222);">
+                    <p class="wow fadeInUp lr-pd" data-wow-delay="0.8s">Inspirados en ti, futura mamá, que deseas tener
+                        un recuerdo único, original y diferente en esta bella etapa de tu vida.</p>
                 </div>
 
             </div>
         </div>
-        
+
     </section>
-<br>
-<br>
+    <div style="background-color:#c9a7c1 ;">
+        <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+            <defs>
+                <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+            </defs>
+            <g class="parallax">
+                <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(201, 167, 193, 0.84)" />
+                <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(222, 184, 212, 0.5)" />
+                <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(237, 211, 231, 0.3)" />
+                <use xlink:href="#gentle-wave" x="48" y="7" fill="#c9a7c1" />
+            </g>
+        </svg>
+    </div>
+    <!--Waves end-->
+
 
     <!-- About Section -->
 
@@ -135,7 +152,7 @@
 
     <!-- Team Section -->
 
-    <section id="team" style="background-color: #D9C4D4;">
+    <section id="team">
         <div class="container">
             <div class="row">
 
@@ -147,7 +164,8 @@
 
                 <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <div class="team-thumb">
-                        <img src="img/73533152_1676211352522118_2314836219759951872_o.jpg" class="img-responsive" alt="Team">
+                        <img src="img/73533152_1676211352522118_2314836219759951872_o.jpg" class="img-responsive"
+                            alt="Team">
                         <div class="team-overlay">
                             <h3>Valeria Carmona</h3>
                             <h4>Fundadora</h4>
@@ -164,8 +182,9 @@
                     <div class="team-thumb">
                         <img src="img/IMG_20191118_173147.jpg" class="img-responsive" alt="Team">
                         <div class="team-overlay">
-                            <h3>Desde</h3>
-                            <h4>2010</h4>
+                            <h3>La satisfacción</h3>
+                            <h4>que se siente el poder plasmar un lindo recuerdo de esta etapa tan importante es única e
+                                incomparable.</h4>
 
                         </div>
                     </div>
@@ -186,7 +205,8 @@
                         <img src="img/IMG_20191005_191448.jpg" class="img-responsive" alt="Team">
                         <div class="team-overlay">
                             <h3>Hemos pintado sonrisas</h3>
-                            <h4>En cientos de futuras mamis mexicanas</h4>
+                            <h4>En cientos de futuras mamis mexicanas, en la ciudad de mexico y el area metropolitana
+                            </h4>
                         </div>
                     </div>
                 </div>
@@ -197,11 +217,14 @@
 
     <!-- CTA Section -->
 
-    <section id="cta" class="bg-gray" >
+    <section id="cta" class="bg-gray">
         <div class="container">
             <div class="row">
 
                 <div class="col-md-offset-2 col-md-8 col-sm-12">
+                    <video src="img/VID_20180203_092355727.mp4" width="100%" autoplay muted loop></video>
+                    <br>
+                    <br>
                     <p class="wow fadeInUp" data-wow-delay="0.4s">Puedes solicitar un presupuesto a medida para tu
                         experiencia BellyBaby</p>
                     <a href="contact.html" class="wow fadeInUp btn btn-success" data-wow-delay="0.8s">¡Solo da clic
