--- a/about.html
+++ b/about.html
@@ -158,7 +158,7 @@
 
                 <div class="col-md-12 col-sm-12">
                     <div class="wow bounceIn section-title">
-                        <h2>Conocenos</h2>
+                        <h2>Conócenos</h2>
                     </div>
                 </div>
 
@@ -205,7 +205,7 @@
                         <img src="img/IMG_20191005_191448.jpg" class="img-responsive" alt="Team">
                         <div class="team-overlay">
                             <h3>Hemos pintado sonrisas</h3>
-                            <h4>En cientos de futuras mamis mexicanas, en la ciudad de mexico y el area metropolitana
+                            <h4>En cientos de futuras mamis mexicanas, en la ciudad de méxico y el área metropolitana
                             </h4>
                         </div>
                     </div>
