--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
                     <div class="contact-detail">
 
                         <div class="contact-detail-1">
-                            <h3>Atendemos a nuestras clientas en toda CDMX y el area metropolitana</h3>
+                            <h3>Atendemos a nuestras clientas en toda CDMX y el área metropolitana</h3>
                             <img src="img/carte.png" width="100%" alt="">
                         </div>
 
