--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             <li><a href="#" data-filter="*" class="selected opc-main-bg">Ver todo</a></li>
                             <li><a href="#" class="opc-main-bg" data-filter=".belly">Belly Painting</a></li>
                             <!--  <li><a href="#" class="opc-main-bg" data-filter=".print">Body painting</a></li> -->
-                            <li><a href="#" class="opc-main-bg" data-filter=".foto">Sesion fotografica</a></li>
+                            <li><a href="#" class="opc-main-bg" data-filter=".foto">Sesión fotografica</a></li>
                             <li><a href="#" class="opc-main-bg" data-filter=".escultura">Escultura</a></li>
                             <!-- <li><a href="#" class="opc-main-bg" data-filter=".html">Templates</a></li> -->
                         </ul>
@@ -461,7 +461,7 @@
         <div class="container">
             <div class="row">
                 <h1 class="wow fadeInUp head" data-wow-delay="0.6s">Mis servicios</h1>
-                <p class="wow fadeInUp lr-pd" data-wow-delay="0.8s">¿Como funciona?</p>
+                <p class="wow fadeInUp lr-pd" data-wow-delay="0.8s">¿Cómo funciona?</p>
                 <br>
                 <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.2s">
                     <div class="bg-white">
@@ -483,7 +483,7 @@
                     <div class="bg-white">
                         <img src="img/madre.png" width="50%" alt="" srcset="">
                         <h3>3</h3>
-                        <h3 style="margin-bottom: 20%;">Vive un día unico</h3>
+                        <h3 style="margin-bottom: 20%;">Vive un día único</h3>
                     </div>
                 </div>
 
