--- a/work.html
+++ b/work.html
@@ -134,7 +134,7 @@
                             <li><a href="#" data-filter="*" class="selected opc-main-bg">Ver todo</a></li>
                             <li><a href="#" class="opc-main-bg" data-filter=".web">Belly Painting</a></li>
                             <li><a href="#" class="opc-main-bg" data-filter=".print">Body painting</a></li>
-                            <li><a href="#" class="opc-main-bg" data-filter=".branding">Fotografia</a></li>
+                            <li><a href="#" class="opc-main-bg" data-filter=".branding">Sesión fotografica</a></li>
                             <li><a href="#" class="opc-main-bg" data-filter=".apps">Escultura</a></li>
                             <!-- <li><a href="#" class="opc-main-bg" data-filter=".html">Templates</a></li> -->
                         </ul>
