--- a/service.html
+++ b/service.html
@@ -97,7 +97,7 @@
                     <img class="wow fadeInUp "
                         src="img/BELLYBABY LOGOTIPO.png" width="40%" alt="" srcset=""
                         style="filter: drop-shadow(5px 5px 5px #222);">
-                    <p class="wow fadeInUp lr-pd" data-wow-delay="0.8s">Nuestra mayor preocupación es poder complacer a todas las futuras mamis que confian en nosotros, es por eso que siempre buscamos realizar un diseño personalizado</p>
+                    <p class="wow fadeInUp lr-pd" data-wow-delay="0.8s">Nuestra mayor preocupación es poder complacer a todas las futuras mamis que confían en nosotros, por esa razón siempre buscamos realizar un diseño personalizado</p>
                 </div>
 
             </div>
@@ -137,15 +137,15 @@
                     <div class="bg-white">
                         <img src="img/splash.png" width="50%" alt="" srcset="">
                         <h3>Revelado del sexo</h3>
-                        <p class="small">Planeamos para ti, una divertida y emotiva didactica, con la que reveleras el sexo de tu bebe a tus familiares y amigos</p>
+                        <p class="small">Planeamos para ti, una divertida y emotiva didáctica, con la que reveleras el sexo de tu bebe a tus familiares y amigos</p>
                     </div>
                 </div>
 
                 <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.6s">
                     <div class="bg-white">
                         <img src="img/camara.png" width="50%" alt="" srcset="">
-                        <h3>Fotografia</h3>
-                        <p class="small">Sesiones fotograficas para inciar tu album de recuerdos, de esta estapa tan importate para ti y tu bebe</p>
+                        <h3>Fotografía</h3>
+                        <p class="small">Sesiones fotograficas para inciar tu álbum de recuerdos, de esta etapa tan impórtate para ti y tu bebe</p>
                     </div>
                 </div>
 
@@ -153,7 +153,7 @@
                     <div class="bg-white">
                         <img src="img/escultura.png" width="50%" alt="" srcset="">
                         <h3>Escultura</h3>
-                        <p class="small">Realizamos moldes en lleso de tu pancita, para despues adornarla con los motivos que te gusten y asi conserves por mas tiempo el recuerdo de tu embarazo </p>
+                        <p class="small">Realizamos moldes en lleso de tu pancita, para después adornarla con los motivos que te gusten y así conserves por más tiempo el recuerdo de tu embarazo </p>
                     </div>
                 </div>
 
@@ -189,9 +189,9 @@
                     <video src="img/VID_20180228_154316767.mp4" width="100%" autoplay muted loop></video>
                     <br>
                     <br>
-                    <p class="wow fadeInUp" data-wow-delay="0.4s">Todos nuestros diseños son unicos y se pueden
-                        personalizar a tu gusto, ademas brinbdamos estos servicios a domicilio</p>
-                    <a href="work.html" class="wow fadeInUp btn btn-success" data-wow-delay="0.8s">¡Revisa nustro
+                    <p class="wow fadeInUp" data-wow-delay="0.4s">Todos nuestros diseños son únicos y se pueden
+                        personalizar a tu gusto, además brindamos estos servicios a domicilio</p>
+                    <a href="work.html" class="wow fadeInUp btn btn-success" data-wow-delay="0.8s">¡Revisa nuestro
                         trabajo!</a>
                 </div>
 
