--- a/about.html
+++ b/about.html
@@ -180,11 +180,11 @@
 
                 <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.6s">
                     <div class="team-thumb">
-                        <img src="img/IMG_20191118_173147.jpg" class="img-responsive" alt="Team">
+                        <img src="img/belly-36.webp" class="img-responsive" alt="Team">
                         <div class="team-overlay">
                             <h3>La satisfacción</h3>
-                            <h4>que se siente el poder plasmar un lindo recuerdo de esta etapa tan importante es única e
-                                incomparable.</h4>
+                            <p>que se siente el poder plasmar un lindo recuerdo de esta etapa tan importante es única e
+                                incomparable.</p>
 
                         </div>
                     </div>
@@ -202,11 +202,11 @@
 
                 <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.8s">
                     <div class="team-thumb">
-                        <img src="img/IMG_20191005_191448.jpg" class="img-responsive" alt="Team">
+                        <img src="img/belly-35.webp" class="img-responsive" alt="Team">
                         <div class="team-overlay">
                             <h3>Hemos pintado sonrisas</h3>
-                            <h4>En cientos de futuras mamis mexicanas, en la ciudad de méxico y el área metropolitana
-                            </h4>
+                            <p>En cientos de futuras mamis mexicanas, en la ciudad de méxico y el área metropolitana
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -250,10 +250,14 @@
 
                             <li><a target="_blank" href="https://www.instagram.com/bellypaintcdmx"
                                     class="fa fa-instagram wow fadeInUp" data-wow-delay="0.4s"></a></li>
-                            <li><a href="mailto:badtz_9@hotmail.com" class="fa fa-envelope-o wow fadeInUp"
+                            <li><a href="mailto:bellybeby@gmail.com" class="fa fa-envelope-o wow fadeInUp"
                                     data-wow-delay="0.6s"></a></li>
                             <li><a target="_blank" href="https://wa.me/+525549650698"
                                     class="fa fa-whatsapp wow fadeInUp" data-wow-delay="0.8s"></a></li>
+                            <li>
+                                <span style="color: black; font-size: 1.25em;"  class="fadeInUp fa fa-phone" data-wow-delay="0.8s"> (+52) 55-4965-0698</span>
+
+                               
                         </ul>
                         <p class="small">Creado por Marko</p>
                     </div>
