--- a/contact.html
+++ b/contact.html
@@ -170,10 +170,14 @@
 
                             <li><a target="_blank" href="https://www.instagram.com/bellypaintcdmx"
                                     class="fa fa-instagram wow fadeInUp" data-wow-delay="0.4s"></a></li>
-                            <li><a href="mailto:badtz_9@hotmail.com" class="fa fa-envelope-o wow fadeInUp"
+                            <li><a href="mailto:bellybeby@gmail.com" class="fa fa-envelope-o wow fadeInUp"
                                     data-wow-delay="0.6s"></a></li>
                             <li><a target="_blank" href="https://wa.me/+525549650698"
                                     class="fa fa-whatsapp wow fadeInUp" data-wow-delay="0.8s"></a></li>
+                            <li>
+                                <span style="color: black; font-size: 1.25em;"  class="fadeInUp fa fa-phone" data-wow-delay="0.8s"> (+52) 55-4965-0698</span>
+
+                               
                         </ul>
                         <p class="small">Creado por Marko</p>
                     </div>
@@ -182,6 +186,7 @@
             </div>
         </div>
     </footer>
+
 
 
     <!-- Back top -->
