--- a/index.html
+++ b/index.html
@@ -452,8 +452,9 @@
 
                     </div>
                     <center>
-                        
-                    <a href="work.html" class="wow fadeInUp btn btn-lg btn-success" data-wow-delay="0.8s">Ver mas...</a>
+
+                        <a href="work.html" class="wow fadeInUp btn btn-lg btn-success" data-wow-delay="0.8s">Ver
+                            mas...</a>
                     </center>
                 </div>
 
@@ -605,10 +606,14 @@
 
                             <li><a target="_blank" href="https://www.instagram.com/bellypaintcdmx"
                                     class="fa fa-instagram wow fadeInUp" data-wow-delay="0.4s"></a></li>
-                            <li><a href="mailto:badtz_9@hotmail.com" class="fa fa-envelope-o wow fadeInUp"
+                            <li><a href="mailto:bellybeby@gmail.com" class="fa fa-envelope-o wow fadeInUp"
                                     data-wow-delay="0.6s"></a></li>
                             <li><a target="_blank" href="https://wa.me/+525549650698"
                                     class="fa fa-whatsapp wow fadeInUp" data-wow-delay="0.8s"></a></li>
+                            <li>
+                                <span style="color: black; font-size: 1.25em;"  class="fadeInUp fa fa-phone" data-wow-delay="0.8s"> (+52) 55-4965-0698</span>
+
+                               
                         </ul>
                         <p class="small">Creado por Marko</p>
                     </div>
@@ -617,6 +622,7 @@
             </div>
         </div>
     </footer>
+
 
 
     <!-- Back top -->
