--- a/about.html
+++ b/about.html
@@ -170,9 +170,18 @@
                             <h3>Valeria Carmona</h3>
                             <h4>Fundadora</h4>
                             <ul class="social-icon">
-                                <li><a href="#" class="fa fa-facebook"></a></li>
-                                <li><a href="#" class="fa fa-twitter"></a></li>
-                                <li><a href="#" class="fa fa-google-plus"></a></li>
+                                <li><a target="_blank" href="https://www.facebook.com/PANCITAPINTADA"
+                                    class="fa fa-facebook wow fadeInUp" data-wow-delay="0.2s"></a></li>
+
+                            <li><a target="_blank" href="https://www.instagram.com/bellypaintcdmx"
+                                    class="fa fa-instagram wow fadeInUp" data-wow-delay="0.4s"></a></li>
+                            <li><a href="mailto:bellybeby@gmail.com" class="fa fa-envelope-o wow fadeInUp"
+                                    data-wow-delay="0.6s"></a></li>
+                            <li><a target="_blank" href="https://wa.me/+525549650698"
+                                    class="fa fa-whatsapp wow fadeInUp" data-wow-delay="0.8s"></a></li>
+                            <li>
+                                <span style="color: black; font-size: 1.25em;"  class="fadeInUp fa fa-phone" data-wow-delay="0.8s"> (+52) 55-4965-0698</span>
+
                             </ul>
                         </div>
                     </div>
